# synapse-invite-checker

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  pyproject.toml
.github/workflows/: python.yml
synapse_invite_checker/: config.py  handlers.py  invite_checker.py  permissions.py  responses.py  store.py  types.py
synapse_invite_checker/rest/: base.py  contacts.py  messenger_info.py
tests/: __init__.py  base.py  rest.py  server.py  test_config.py  test_contacts_api.py  test_createrooms_local.py  test_createrooms_remote.py  test_disable_epa_communication.py  test_list.py  test_local_invites.py  test_local_joins.py  test_permissions.py  test_reactions.py  test_redaction.py  test_remote_invites.py  test_remote_joins.py  test_room_message_timestamp.py  test_room_versions.py  test_scheduled_tasks.py  test_simple.py  test_tim_federation.py  test_tim_information.py  unittest.py  utils.py
tests/test_utils/: __init__.py  event_injection.py  fake_room_creation.py  html_parsers.py  logging_setup.py  oidc.py
