[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synapse-invite-checker"
description = 'Synapse module to handle TIM contact management and invite permissions'
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-only"
keywords = []
authors = [
  { name = "Nicolas Werner", email = "n.werner@famedly.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "twisted",
  "cachetools",
  "asyncache",
  "jwcrypto",
  "pyopenssl",
  # For the emoji reaction restrictions
  "emoji",
]
version = "0.4.13"

[project.urls]
Documentation = "https://github.com/famedly/synapse-invite-checker#synapse-invite-checker"
Issues = "https://github.com/famedly/synapse-invite-checker/-/issues"
Source = "https://github.com/famedly/synapse-invite-checker/"

[tool.hatch.envs.default]
dependencies = [
  "black",
  "pytest",
  "pytest-cov",
  "mock",
  "parameterized",
  "psycopg2",
  # we don't depend on synapse directly to prevent pip from pulling the wrong synapse,
  # when we just want to install the module
  "matrix-synapse @ git+https://github.com/famedly/synapse.git@master"
]

[tool.hatch.envs.hatch-static-analysis]
dependencies = [
  "black",
  "isort",
  "ruff",
  "mypy",
  "mypy-zope",
  "pydantic",
  "mypy-zope",
  "types-PyYAML",
  "types-bleach",
  "types-cachetools",
  "types-requests",
  "types-pyOpenSSL"
]

[tool.hatch.envs.hatch-static-analysis.scripts]
format-check = [
  "isort . --check --diff",
  "black . --check --diff"
]
format-fix = [
  "isort .",
  "black ."
]
lint-check = [
  "mypy",
  "ruff check"
]
lint-fix = [
  "mypy",
  "ruff check --fix"
]

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
ignore = [
  "FBT001",
  "FBT002",
  "TRY002",
  "TRY003",
  "PLW0603",
  "N802",
  "N815"
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "PLR2004", "N803", "SLF001", "UP035", "PT019"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
install_types = true
plugins = [
  "pydantic.mypy",
  "mypy_zope:plugin"
]
files = ["synapse_invite_checker", "tests"]

[tool.isort]
profile = "black"
src_paths = ["synapse_invite_checker", "tests"]

[tool.hatch.envs.hatch-test]
# These below are installed by default. This list is to help not reinstall something.
# Updating hatch will change the version numbers, so ignore the pinned versions.
#dependencies = [
#  "coverage-enable-subprocess==1.0",
#  "coverage[toml]~=7.11",
#  "pytest~=9.0",
#  "pytest-mock~=3.12",
#  "pytest-randomly~=3.15",
#  "pytest-rerunfailures~=14.0",
#  "pytest-xdist[psutil]~=3.5",
#]

extra-dependencies = [
  "parameterized",
  "psycopg2",
  "pytest-cov",
  # we don't depend on synapse directly to prevent pip from pulling the wrong synapse,
  # when we just want to install the module
  "matrix-synapse @ git+https://github.com/famedly/synapse.git@master"
]

# The 'hatch test ...' command has the built-in scripts that define its invocation.
# Override those scripts so the coverage works as expected.
#
# In particular, the 'coverage run -m python ...' command does not work correctly. The
# behavior was not producing the subprocess-enabled coverage files in CI, but worked
# locally(should have been 4, but only 1 was produced. It had no data). Using the
# pytest-cov plugin does seem to produce these files and the missing lines display
# format correctly. Since it handles the internal combine/report commands, set those
# scripts below to do nothing(or there will be errors in CI that are fake).
[tool.hatch.envs.hatch-test.scripts]
# The HATCH_TEST_ARGS environment variable is how the `test` command's flags are
# translated and internally populated without affecting the user's arguments. This is
# also the way that "extra arguments" are passed. Leave it there
run = "pytest{env:HATCH_TEST_ARGS:} {args}"

# The original 'run-cov' is below, this is overriden to produce coverage properly.
#run-cov = "coverage run -m pytest{env:HATCH_TEST_ARGS:} {args}"
# Notes for this command line: Using --cov=synapse_invite_checker instead of having this
#  directory in the 'coverage.run' config above actually produces the correct coverage
#  files(the ones that were missing, as mentioned above). The 'cov-report' options both
#  produce useful output(one for the codecov file and the other displays the missing
#  coverage lines).
run-cov = "pytest{env:HATCH_TEST_ARGS:} --cov=synapse_invite_checker --cov-report=lcov:lcov.info --cov-report=term-missing --cov-config=pyproject.toml {args}"

# As mentioned above, the defaults for these scripts are commented out as they will
# produce fake errors in CI. They attempt to run but the result of those commands
# already exists. This raises error codes and fails the test.
#cov-combine = "coverage combine"
#cov-report = "coverage report"
cov-combine = ""
cov-report = ""
